--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+# ComfyUI-SiberiaNodes Dependencies
+# Required for ComfyUI custom nodes with Ollama integration
+
+# Core dependencies
 torch>=1.13.0
 numpy>=1.21.0
 Pillow>=8.0.0
 typing-extensions>=4.0.0
 requests>=2.25.0
+
+# Ollama integration
 ollama>=0.1.0
+
+# Optional dependencies for enhanced functionality
+aiohttp>=3.8.0  # For async HTTP requests
+pyyaml>=6.0      # For YAML configuration files
