Update PublisherId and add environment configuration for publishing - Set PublisherId to 'siberia' for ComfyUI Registry publishing - Add .env file with API key configuration - Add publish.sh script for convenient publishing - Fix environment variable setup for ComfyUI Registry authentication

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ Documentation = "https://github.com/siberiah2o/ComfyUI-SiberiaNodes/wiki"
 "Bug Tracker" = "https://github.com/siberiah2o/ComfyUI-SiberiaNodes/issues"
 
 [tool.comfy]
-PublisherId = "siberiah2o"
+PublisherId = "siberia"
 DisplayName = "ComfyUI-SiberiaNodes"
 Icon = ""
 includes = []
