Update author email to siberiah2o@outlook.com

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ version = "1.0.1"
 license = {file = "LICENSE"}
 
 authors = [
-    {name = "siberiah0h", email = "siberiah0h@gmail.com"},
+    {name = "siberiah2o", email = "siberiah2o@outlook.com"},
 ]
 
 classifiers = [
